--- a/starter/cloudstorage/src/main/resources/application.properties
+++ b/starter/cloudstorage/src/main/resources/application.properties
@@ -7,13 +7,26 @@ server.error.include-binding-errors=always
 #spring.datasource.url=jdbc:postgresql://localhost:5432/registration
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/super_duper_drive
+spring.datasource.username=postgres
+spring.datasource.password=Aa1212
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.boot.allow_jdbc_metadata_access=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.show-sql=true
+
+
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.mybatis=DEBUG
+
+spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
+
+log_statement = 'all'
+log_min_duration_statement = 0
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
